app/assets/stylesheets/layout.css.scss
@import "partials/colors";
@import "partials/fonts";
@import "partials/oma_mixins";

body {
  //font-family: $oma_body_font;
  margin-top: 15px;
  margin-left: 5%;
  margin-right: 5%;

  #upper_page_content {
    #carousel_content {
      border: 1px solid $oma_lightest_grey;
      border-radius:5px;
      float: left;
      font-size: 0.8em;
      height: 320px;
      overflow: hidden;
      position: relative;
      top: 0px;
      width: 66%;
    }
    #pie_content {
      float: right;
      border: 1px solid $oma_lightest_grey;
      border-radius:5px;
      width: 33%;
      height: 320px;
    }
  }

  #lower_page_content {
    #welcome_content {
      float: left;
      height: 320px;
      overflow: auto;
      width: 33%;
    }
    #news_content {
      border: 1px solid $oma_grey;
      border-radius:5px;
      display: inherit;
      height: 320px;
      width: 33%;
      overflow: auto;
    }
    #studies_content {
      border: 1px solid $oma_grey;
      border-radius:5px;
      display: inherit;
      height: 320px;
      width: 33%;
    }
  }
}

body {
  h1, h2 {
    font-family: $oma_heading_font;
    color: $oma_green;
  }
}
body {
  h3 {
    color: $oma_accent_green;
    font: $oma_accent_font;
  }
}
body {
  ul {
    padding: 0;
    //text-align: center;
  }
}

// used to test style markup for FAQs
li {
  color: $oma_green;
  font: $oma_body_font;
}

@mixin oma-links {
  a,
  a:link,
  a:hover,
  a:active,
  a:visited {
    color:$oma_grey;
    text-align:center;
    text-decoration:none;
    text-transform:uppercase;
  }
}

header#page_header { 
  @include oma-links;

  nav#utility {
    float: right;
    font-size: 0.8em;
    position: relative;
    left: -45px;
    top: 0px;
  }

  #logo {
    position: relative;
    top: 15px;
  }
}


header#kpb_header { 
  overflow: hidden;
  display: inline;

  @include oma-links;

  nav#pie_logo {
    // background: red;
    float: right;
  }
  #pie_content {
    //  border: 1px solid $oma_lightest_grey;
    width: 12%;
  }

  #logo {
    position: relative;
  }
}

footer#page_footer { 
  background-color: $oma_white;
  border: 1px solid $oma_light_green;
  border-bottom: 5px solid $oma_light_black;
  color: $oma_green;
  font-size: 0.7em;
  overflow: hidden;
  display: inline;

  nav#left_logo {
    float: left;
    font-size: 0.8em;
    position: relative;
    top: 0px;
  }
  nav#right_logo {
    float: right;
    font-size: 0.8em;
    position: relative;
    top: 0px;
  }

  ul {
    padding: 0;
    text-align: center;

    li {
      border-right: 2px solid $oma_light_grey;
      display: inline;
      margin: 0;
      &:last-child {
        border-right: none;
      }
      a {
        padding: 5px 10px; 
        &:link,
        &:hover, 
        &:visited,
        &.active {
          color: $oma_green;
        }
      }
    }
  }
}

#tagline {
  margin-left: 20px;
}

container { 
  overflow: hidden; 
  padding: 0 20px 0 0;
  background: $oma_light_grey;
}

// p. 38 Rails Views
// sections for content, sidebar
//
section#content { 
  float: left;
  margin: 1% 5%;
  width: 30%;
} 

